--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+New in v0.3.0 (2002/10/07)
+--------------------------
+
+Added rdiff-backup-style --include/exclude-filelist-globbing options.
+Now filelists with "+ /- " can be treated exactly like repeated
+--include or --exclude options.
+
+
 New in v0.2.1 (2002/10/31)
 --------------------------
 
