--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+New in v0.3.1 (2002/??/??)
+--------------------------
+
+Now by default the most recent files get restored, not the oldest.
+
+
 New in v0.3.0 (2002/11/10)
 --------------------------
 
