--- a/TODO
+++ b/TODO
@@ -1,3 +1,18 @@
 Look at handling of files with very long names
 
 Raise error/warning when --file-to-restore doesn't match anything.
+
+Think about option to disable gpg encryption.  (Suggested by Attila
+Kinali, maybe Dean Gaudet a while ago.)
+
+Think about doing restores file-by-file: download the first volume in
+every increment and then produce the first file, then the second, etc.
+This would make doing verifies easier.  Also restore would in theory
+be more efficient, because, for instance, deleted files would not have
+to be created, possibly patched, and then deleted again.
+	However, it seems that temp space usage would be a problem - the
+amount required could grow to 50MB (volume size)* num of increments.
+So 100 days of increments = 5GB max volume size.  This can be reduced
+by decreasing the volume size, but that might lead to other
+inefficiencies.
+
