--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.3.1 (2002/??/??)
+New in v0.3.1 (2002/11/17)
 --------------------------
 
 Now by default the most recent files get restored, not the oldest.
@@ -10,6 +10,11 @@ directory corrupted in various ways (for instance, if it contained a
 file that looked like a duplicity file but had an invalid time
 string).
 
+Added --cleanup option, for deleting the files that may accumulate if
+a duplicity session is aborted after it has uploaded some files.
+
+Added --remove-older-than option, for safely deleting backup sets
+older than the given time.
 
 
 New in v0.3.0 (2002/11/10)
