--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,8 +21,8 @@ verbosity is set to 3 or less.
 
 short-filenames get even shorter---now use base 36 (0-9 and a-z) for
 times and volume numbers.  This change is not backwards compatible but
-probably I'm the only one affected...
-
+probably I'm the only one affected.  If not, let me know and I can
+probably write a little script.
 
 
 New in v0.3.0 (2002/11/10)
