--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+New in v0.4.0 (2002/??/??)
+--------------------------
+
+Changed restore procedure to download volumes from all backup sets
+simultaneously.
+
+
 New in v0.3.1 (2002/11/17)
 --------------------------
 
