--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Applied (version of) Helmut Schneider's patch to display file mod
+times with --list-current-files.
+
+
 New in v0.4.0 (2002/11/30)
 --------------------------
 
