Added man page info on --short-filenames option

--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@ Add --list-increments type option
 include/exclude options should work when restoring.
 
 Figure out better way of searching through the archive.
+
+Examine large file performance.
