Sebastian Wilhelmi's update for rsync backend

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.4.1 (2003/03/15)
+New in v0.4.1 (2003/??/??)
 --------------------------
 
 Applied (version of) Helmut Schneider's patch to display file mod
@@ -6,6 +6,10 @@ times with --list-current-files.
 
 Fixed bug found by Rob Browning handling symlinks with long names that
 have long names.
+
+Applied Stephen Isard's patch to fix exclude-globbing-filelist.
+
+Applied Sebastian Wilhelmi's patch to add rsync as a backend.
 
 
 New in v0.4.0 (2002/11/30)
