--- a/TODO
+++ b/TODO
@@ -1,7 +1,11 @@
+Reported by Peter Ehrenberg: Make sure that turning --archive-dir on
+and off won't mess things up.
+
 Add --list-increments type option
 
 include/exclude options should work when restoring.
 
-Figure out better way of searching through the archive.
+Figure out better way of searching through the archive (for instance
+for last backed up version of a file).
 
 Examine large file performance.
