Added --version switch, small change to man page

--- a/duplicity.1
+++ b/duplicity.1
@@ -8,7 +8,7 @@ duplicity \- Encrypted backup using rsync algorithm
 
 .B duplicity
 .BI [ options ]
-.I source_url target_filename
+.I source_url target_directory
 
 .B duplicity
 .BI [ options ]
