Mention problem with /proc

--- a/TODO
+++ b/TODO
@@ -9,3 +9,5 @@ Figure out better way of searching through the archive (for instance
 for last backed up version of a file).
 
 Examine large file performance.
+
+Have duplicity work on /proc
