Added note about passphrase confirmation

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+New in v0.4.2 (??????????)
+--------------------------
+
+Followed suggestion by David Rigel, make user type passphrase twice to
+confirm.
+
+
 New in v0.4.1 (2003/08/09)
 --------------------------
 
