Eric Hanchrow's remove signature patch

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@ New in v0.4.2 (??????????)
 Followed suggestion by David Rigel, make user type passphrase twice to
 confirm.
 
+Eric Hanchrow's patch makes sure duplicity deletes older signatures
+when using --remove-older-than.
+
 
 New in v0.4.1 (2003/08/09)
 --------------------------
