final changes for version 0.4.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.4.2 (??????????)
+New in v0.4.2 (2006/02/02)
 --------------------------
 
 Mathias de Riese's substantial patch or patches appear to have been
