Fixed Jiri's name.  Sorry about that :-)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@ confirm.
 Eric Hanchrow's patch makes sure duplicity deletes older signatures
 when using --remove-older-than.
 
-Jiri Taylor's patch may fix some scp/sftp problems.
+Jiri Tyr's patch may fix some scp/sftp problems.
 
 asdf's patch makes sure uids or gids over 2097151 don't corrupt the
 tarfiles.
