--- a/duplicity.1
+++ b/duplicity.1
@@ -271,6 +271,13 @@ must have the same syntax as scp.  This option can also be used to
 give extra arguments to scp, for instance "--scp-command \'scp -i
 foo\'".  The default is "scp".
 .TP
+.BI "--sftp-command " command
+This option only matters when using the ssh/scp backend.  There 
+.I command
+will be used instead of sftp for listing and deleting files.  The
+default is "sftp".  For more information see
+.BR --scp-command .
+.TP
 .BI "--sign-key " key
 This option can be used when backing up or restoring.  When backing
 up, all backup files will be signed with keyid
@@ -279,14 +286,6 @@ When restoring, duplicity will signal an error if any remote file is
 not signed with the given keyid.
 .I key
 should be an 8 character hex string, like AA0E73D2.
-.TP
-.BI "--ssh-command " command
-Use
-.I command
-instead of "ssh" to execute commands on the remote side.  This only
-matters when using the ssh/scp backend.  See
-.B --scp-command
-for more information.
 .TP
 .BI "--remove-older-than " time
 Delete all backup sets older than the given time.  If old backup sets
