Patch 6032 - Alexander Zangerl <az@debian.org>: a new feature patch: i've recently gotten annoyed with having gazillions of 5mb files and therefore added a --volsize option to allow the user setting the chunk size. the patch is simple and contains a manpage update as well.

--- a/duplicity.1
+++ b/duplicity.1
@@ -313,6 +313,11 @@ is given, restrict verify to that file or directory.  duplicity will
 exit with a non-zero error level if any files are different.  On
 verbosity level 4 or higher, log a message for each file that has
 changed.
+.TP
+.B --volsize number
+Change the volume size to 
+.IR number 
+Mb. Default is 5Mb.
 
 
 .SH TIME FORMATS
