Fix environment var name for ssh backend.

--- a/duplicity.1
+++ b/duplicity.1
@@ -303,7 +303,7 @@ not signed with the given keyid.
 should be an 8 character hex string, like AA0E73D2.
 .TP
 .B --ssh-askpass
-Tells the ssh/scp backend to use SSH_PASSWORD from the environment,
+Tells the ssh/scp backend to use FTP_PASSWORD from the environment,
 or, if that is not present, to prompt the user for the remote system
 password.
 .TP
