--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@ New in v0.4.4.RC3 (2007/10/02)
 Patch from Olivier Croquette to add --full-if-older-than=<time>
 option to force a full backup at <time> rather than incremental.
 
-Patch from Olivier Croquette to add :port option in FTP.
+Patch from Stefan Hoth to add :port option in FTP.
 
 Patch from Mitchell Garnaat to get all keys from S3, rather
 than just the first 1000.
